# auto-dinosaur-game

./: pyproject.toml
auto_dinosaur_game/: game_bot.py
